# techcxo-payroll-worksheets-app

./: .gitignore  README.md  pyproject.toml  requirements.md
.github/workflows/: build-windows.yml
src/app/: extraction.py  main.py  schema.py  transform.py  utils.py
